Added material reading

--- a/Flagrum.Console/Flagrum.Console.csproj
+++ b/Flagrum.Console/Flagrum.Console.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Flagrum.Archiver\Flagrum.Archiver.csproj" />
     <ProjectReference Include="..\Flagrum.Core\Flagrum.Core.csproj" />
+    <ProjectReference Include="..\Flagrum.Gfxbin\Flagrum.Gfxbin.csproj" />
   </ItemGroup>
 
 </Project>
