Mesh repacking for Blender plugin, interop method for export

--- a/Flagrum.Interop/Flagrum.Interop.csproj
+++ b/Flagrum.Interop/Flagrum.Interop.csproj
@@ -31,4 +31,10 @@
         <ProjectReference Include="..\Flagrum.Gfxbin\Flagrum.Gfxbin.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="..\Flagrum.Blender\*.py" LinkBase="..\">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
