--- a/Flagrum.Console/Flagrum.Console.csproj
+++ b/Flagrum.Console/Flagrum.Console.csproj
@@ -12,4 +12,8 @@
         <ProjectReference Include="..\Flagrum.Interop\Flagrum.Interop.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="27.2.0" />
+    </ItemGroup>
+
 </Project>
