--- a/Flagrum.Interop/Flagrum.Interop.csproj
+++ b/Flagrum.Interop/Flagrum.Interop.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Flagrum.Archiver\Flagrum.Archiver.csproj" />
         <ProjectReference Include="..\Flagrum.Gfxbin\Flagrum.Gfxbin.csproj" />
     </ItemGroup>
 
