First working prototype

--- a/Flagrum.Gfxbin/Flagrum.Gfxbin.csproj
+++ b/Flagrum.Gfxbin/Flagrum.Gfxbin.csproj
@@ -134,6 +134,21 @@
       <None Update="Gmtl\Templates\UNNAMED_HUMAN_SKIN.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Gmtl\Textures\black.btex">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Gmtl\Textures\blue.btex">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Gmtl\Textures\teal.btex">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Gmtl\Textures\white.btex">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Gmtl\Textures\white-color.btex">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
