--- a/Flagrum.Archiver/Flagrum.Archiver.csproj
+++ b/Flagrum.Archiver/Flagrum.Archiver.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="DotNetZip" Version="1.16.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Flagrum.Core\Flagrum.Core.csproj" />
+    <ProjectReference Include="..\Flagrum.Gfxbin\Flagrum.Gfxbin.csproj" />
   </ItemGroup>
 
   <ItemGroup>
