--- a/Flagrum.Desktop/Flagrum.Desktop.csproj
+++ b/Flagrum.Desktop/Flagrum.Desktop.csproj
@@ -5,15 +5,23 @@
         <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <ApplicationIcon>flagrum.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="6.0.101-preview.10.2068"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="6.0.101-preview.10.2068" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Flagrum.Web\Flagrum.Web.csproj"/>
+        <ProjectReference Include="..\Flagrum.Web\Flagrum.Web.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="flagrumHeader.png" />
+      <Content Include="flagrumHeader.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
