--- a/Flagrum.Blender/Flagrum.Blender.csproj
+++ b/Flagrum.Blender/Flagrum.Blender.csproj
@@ -1,9 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Flagrum.Core\Flagrum.Core.csproj"/>
+    </ItemGroup>
+
+    <PropertyGroup>
+        <SolutionDir>$([System.IO.Path]::GetDirectoryName($(MSBuildProjectDirectory)))</SolutionDir>
+        <PythonScriptsDir>$([System.IO.Path]::GetDirectoryName($(PublishDir)))</PythonScriptsDir>
+    </PropertyGroup>
+
+    <Target Name="CopyDependencies" AfterTargets="Publish">
+        <ItemGroup>
+            <Blender Include="$(SolutionDir)\Flagrum.Blender\*.py"/>
+        </ItemGroup>
+        <Copy SourceFiles="@(Blender)" DestinationFolder="$(PythonScriptsDir)"/>
+    </Target>
 
 </Project>
