--- a/Flagrum.Desktop/Flagrum.Desktop.csproj
+++ b/Flagrum.Desktop/Flagrum.Desktop.csproj
@@ -5,7 +5,7 @@
         <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
-        <ApplicationIcon>flagrum.ico</ApplicationIcon>
+        <ApplicationIcon>Resources\flagrum.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,9 +20,16 @@
 
     <ItemGroup>
       <None Remove="flagrumHeader.png" />
-      <Resource Include="flagrumHeader.png">
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Resources\flagrum-titlebar.png" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="Resources\flagrum-titlebar.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Resource>
+      </Content>
     </ItemGroup>
 
 </Project>
