--- a/Flagrum.Blender/Flagrum.Blender.csproj
+++ b/Flagrum.Blender/Flagrum.Blender.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Flagrum.Core\Flagrum.Core.csproj"/>
+        <ProjectReference Include="..\Flagrum.Core\Flagrum.Core.csproj" />
     </ItemGroup>
 
     <PropertyGroup>
@@ -18,9 +18,9 @@
 
     <Target Name="CopyDependencies" AfterTargets="Publish">
         <ItemGroup>
-            <Blender Include="$(SolutionDir)\Flagrum.Blender\*.py"/>
+            <Blender Include="$(SolutionDir)\Flagrum.Blender\**\*.py" Exclude="$(SolutionDir)\Flagrum.Blender\venv\**\*.py" />
         </ItemGroup>
-        <Copy SourceFiles="@(Blender)" DestinationFolder="$(PythonScriptsDir)"/>
+        <Copy SourceFiles="@(Blender)" DestinationFiles="@(Blender->'$(PythonScriptsDir)\%(RecursiveDir)%(Filename)%(Extension)')" />
     </Target>
 
 </Project>
