Fixed bug with header icon not displaying on release build

--- a/Flagrum.Desktop/Flagrum.Desktop.csproj
+++ b/Flagrum.Desktop/Flagrum.Desktop.csproj
@@ -27,9 +27,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="Resources\flagrum-titlebar.png">
+      <Resource Include="flagrum-titlebar.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+      </Resource>
     </ItemGroup>
 
 </Project>
