--- a/Flagrum.Core/Flagrum.Core.csproj
+++ b/Flagrum.Core/Flagrum.Core.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="CsvHelper" Version="27.2.1" />
+        <PackageReference Include="DirectXTexNet" Version="1.0.3" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
