--- a/Flagrum.Core/Flagrum.Core.csproj
+++ b/Flagrum.Core/Flagrum.Core.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <DebugType>embedded</DebugType>
     </PropertyGroup>
 
     <ItemGroup>
