--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Dependencies that are copied after publish
+Dependencies/
+Steamworks.NET.dll
+
+# Jetbrains Rider data
+.idea/
