--- a/Flagrum.Console/Flagrum.Console.csproj
+++ b/Flagrum.Console/Flagrum.Console.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Flagrum.Core\Flagrum.Core.csproj" />
+        <ProjectReference Include="..\Flagrum.Web\Flagrum.Web.csproj" />
     </ItemGroup>
 
 </Project>
