--- a/Flagrum.Blender/Flagrum.Blender.csproj
+++ b/Flagrum.Blender/Flagrum.Blender.csproj
@@ -11,16 +11,16 @@
         <ProjectReference Include="..\Flagrum.Core\Flagrum.Core.csproj" />
     </ItemGroup>
 
-    <PropertyGroup>
-        <SolutionDir>$([System.IO.Path]::GetDirectoryName($(MSBuildProjectDirectory)))</SolutionDir>
-        <PythonScriptsDir>$([System.IO.Path]::GetDirectoryName($(PublishDir)))</PythonScriptsDir>
-    </PropertyGroup>
+	<!--<PropertyGroup>
+		<SolutionDir>$([System.IO.Path]::GetDirectoryName($(MSBuildProjectDirectory)))</SolutionDir>
+		<PythonScriptsDir>$([System.IO.Path]::GetDirectoryName($(PublishDir)))</PythonScriptsDir>
+	</PropertyGroup>
 
-    <Target Name="CopyDependencies" AfterTargets="Publish">
-        <ItemGroup>
-            <Blender Include="$(SolutionDir)\Flagrum.Blender\**\*.py" Exclude="$(SolutionDir)\Flagrum.Blender\venv\**\*.py" />
-        </ItemGroup>
-        <Copy SourceFiles="@(Blender)" DestinationFiles="@(Blender->'$(PythonScriptsDir)\%(RecursiveDir)%(Filename)%(Extension)')" />
-    </Target>
+	<Target Name="CopyDependencies" AfterTargets="Publish">
+		<ItemGroup>
+			<Blender Include="$(SolutionDir)\Flagrum.Blender\**\*.py" Exclude="$(SolutionDir)\Flagrum.Blender\venv\**\*.py" />
+		</ItemGroup>
+		<Copy SourceFiles="@(Blender)" DestinationFiles="@(Blender->'$(PythonScriptsDir)\%(RecursiveDir)%(Filename)%(Extension)')" />
+	</Target>-->
 
 </Project>
