Asset Explorer Game View, Model Replacements Fix

--- a/Flagrum.Core/Flagrum.Core.csproj
+++ b/Flagrum.Core/Flagrum.Core.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="zlib64.dll" />
+      <EmbeddedResource Include="zlib64.dll" />
+    </ItemGroup>
+
 </Project>
