Ebex reader progress

--- a/Flagrum.Core/Flagrum.Core.csproj
+++ b/Flagrum.Core/Flagrum.Core.csproj
@@ -15,4 +15,8 @@
       <None Remove="zlib64.dll" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Ebex\Xmb2" />
+    </ItemGroup>
+
 </Project>
