--- a/Flagrum.Web/Flagrum.Web.csproj
+++ b/Flagrum.Web/Flagrum.Web.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Blazor.Extensions.Canvas" Version="1.1.1" />
         <PackageReference Include="DirectXTexNet" Version="1.0.3" />
+        <PackageReference Include="EFCore.BulkExtensions" Version="6.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
