--- a/Flagrum.Core/Flagrum.Core.csproj
+++ b/Flagrum.Core/Flagrum.Core.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="CsvHelper" Version="27.2.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="protobuf-net" Version="3.1.17" />
         <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     </ItemGroup>
 
