--- a/Flagrum.Web/Flagrum.Web.csproj
+++ b/Flagrum.Web/Flagrum.Web.csproj
@@ -283,6 +283,10 @@
           <Generator>ResXFileCodeGenerator</Generator>
           <LastGenOutput>ModelPreviewSettingsModal.ja-JP.Designer.cs</LastGenOutput>
         </EmbeddedResource>
+        <EmbeddedResource Update="Features\EarcMods\Modals\ModCardModal.resx">
+          <Generator>ResXFileCodeGenerator</Generator>
+          <LastGenOutput>ModCardModal.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
 
